$Id$                       -*-text-*-


**** 0.66 NOT RELEASED YET


Fix rt.cpan.org #43765
    
    Code inconsistent with documentation for loop_once.

    Note: Keeping timeout undefined in loop_once will now block until
    something arrived on the socket.

Fix rt.cpan.org #47050

    Fixed logic error in bgsend socket acquisition code.

Fix rt.cpan.org #47265 (partial)

    Frequently Net:DNS under Windows XP has a UDP problem which is
    caused by a buggy implementation of SOCKS under Windows.

    One liner added to not continue UDP processing when that happens.

Feature KX RR
    
    Added support for the KX RR, RFC2230
    The implementation is trivial since the KX inherets almost all of
    its functionality by inheritance from the MX RR.


Fix NSAP RR string representation

    RFC1706 specifies the masterfile format to have a leading "0x" and
    optional dot. This was not how the RR was represented with the
    rdatastr method (and hence string and print).

Fix rt.cpan.org #52307 AAAA v4compat parsing bug 
    Acknowledgement: BLBLACK

Fix AAAA dynamic update

    Dynamic update of AAAA caused FORMERR on the prerequisite caused
    by AAAA creating rdata even when an address whas never specified.
    This fix may cause difference in behavior for people who expect a

    NULL address ("::") when creating a AAAA without an address
    specified.


Feature HIP RR

    Added support for the HIP RR, RFC5205
    perldoc Net::DNS::RR::HIP for more information.


Feature DHCID RR
    Added rudimentary support for the DHCID RR.


Fix rt.cpan.org #50883
    This is basically #11931 but for cygwin.

    Codepath in Cygwin and Win32 are now the same. This adds a
    dependency in cygwin.
    Acknowledgements "mikaraento"

Fix rt.cpan.org #45407 and #43190
    Fixed escaping of semicolon.

    Note a change in behavior: 
    For TXT and SPF the rdatastr method (and therefore the
    print, and string method) returns the escaped format while the 